--- a/src/index.css
+++ b/src/index.css
@@ -379,6 +379,42 @@
       linear-gradient(to bottom, rgba(52, 56, 92, 0.55) 1px, transparent 1px);
   }
 
+  .cta-grid-light {
+    background-image:
+      linear-gradient(to right, #e7e5e4 1px, transparent 1px),
+      linear-gradient(to bottom, #e7e5e4 1px, transparent 1px);
+    background-size: 20px 20px;
+    background-position: 0 0, 0 0;
+    mask-image:
+      repeating-linear-gradient(to right, black 0px, black 3px, transparent 3px, transparent 8px),
+      repeating-linear-gradient(to bottom, black 0px, black 3px, transparent 3px, transparent 8px),
+      radial-gradient(ellipse 60% 60% at 50% 50%, #000 30%, transparent 70%);
+    -webkit-mask-image:
+      repeating-linear-gradient(to right, black 0px, black 3px, transparent 3px, transparent 8px),
+      repeating-linear-gradient(to bottom, black 0px, black 3px, transparent 3px, transparent 8px),
+      radial-gradient(ellipse 60% 60% at 50% 50%, #000 30%, transparent 70%);
+    mask-composite: intersect;
+    -webkit-mask-composite: source-in;
+  }
+
+  .cta-grid-dark {
+    background-image:
+      linear-gradient(to right, rgba(52, 56, 92, 0.55) 1px, transparent 1px),
+      linear-gradient(to bottom, rgba(52, 56, 92, 0.55) 1px, transparent 1px);
+    background-size: 20px 20px;
+    background-position: 0 0, 0 0;
+    mask-image:
+      repeating-linear-gradient(to right, black 0px, black 3px, transparent 3px, transparent 8px),
+      repeating-linear-gradient(to bottom, black 0px, black 3px, transparent 3px, transparent 8px),
+      radial-gradient(ellipse 60% 60% at 50% 50%, #000 30%, transparent 70%);
+    -webkit-mask-image:
+      repeating-linear-gradient(to right, black 0px, black 3px, transparent 3px, transparent 8px),
+      repeating-linear-gradient(to bottom, black 0px, black 3px, transparent 3px, transparent 8px),
+      radial-gradient(ellipse 60% 60% at 50% 50%, #000 30%, transparent 70%);
+    mask-composite: intersect;
+    -webkit-mask-composite: source-in;
+  }
+
   @keyframes marquee-horizontal {
     from {
       transform: translateX(0);
